--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@ai-sdk/openai": "^2.0.30",
     "@ai-sdk/react": "^2.0.44",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "ai": "^5.0.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.27.1",
     "dotenv": "^17.2.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
