--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start:all": "concurrently -k -n web,py -c auto \"npm run dev\" \"cd python_optimizer && uv run app.py\""
   },
   "dependencies": {
+    "@ai-sdk/gateway": "^1.0.25",
     "@ai-sdk/openai": "^2.0.30",
     "@ai-sdk/react": "^2.0.44",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "ai": "^5.0.44",
