--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^2.12.7",
+    "sonner": "1.7.4",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.20.5"
   },
